# buildexes

./: .gitignore  README.md  azure-pipelines.yml
.github/workflows/: build.yml
azure-pipelines/: Build_Exes.yaml  Build_Exes.yaml~
tests/src/oo/: 1-manualmod.cpp  1.cpp  2.cpp  CMakeLists.txt  InheritanceTest3.cpp  cory.cpp  oo2.cpp  oo_matrix10.cpp  ooneg.cpp
